--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                     </div>
                     <div class="map">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d942.5038423632541!2d88.38951803031911!3d23.006966178997764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f8ecba599ef8fd%3A0xbd1a9dd2d34224ea!2zMjPCsDAwJzI1LjMiTiA4OMKwMjMnMjEuMyJF!5e1!3m2!1sen!2sin!4v1617465450977!5m2!1sen!2sin"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.007872428341!2d88.46955395078218!3d22.57880888510688!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a02757023e0d4d3%3A0x50236d4275482829!2sBiswa%20Bangla%20Gate!5e0!3m2!1sen!2sin!4v1628568252799!5m2!1sen!2sin"
                             width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
                 </section>
